--- a/styles/page/enroll.module.scss
+++ b/styles/page/enroll.module.scss
@@ -46,8 +46,11 @@
 
 #popup {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   min-height: 100vh;
+  z-index: 9999;
   background-color: #00000078;
   display: flex;
   align-items: center;
